# xployt-L2

./: .env.sample  .gitignore  README.md  file_structure.json  generate_metadata.py  get_file_struct.py  get_file_struct_json.py  group_subsets.py  main.py  pipeline_executor.py  pipeline_suggester.py  pyproject.toml  select_vuln_files.py  test_llm.py  vuln_file_metadata.json  vuln_files_selection.json
data/: file_subsets.json  pipelines.json  vuln_file_metadata.json  vuln_files_selection.json
output/idurar-erp-crm_data/: file_subsets.json  subset_pipeline_suggestions.json  vuln_file_metadata.json  vuln_files_selection.json
test/: test_langsmith.py  test_settings.py
utils/: convert_reports.py  path_utils.py
v2_data/: file_subsets.json  subset_pipeline_suggestions.json  vuln_file_metadata.json  vuln_files_selection.json
v2_data/pipeline_outputs/: subset-001_pipeline_injection_owasp_only.json  subset-001_pipeline_injection_remediation_suggestions.json  subset-001_pipeline_injection_vuln_report.json  subset-002_pipeline_injection_owasp_only.json  subset-002_pipeline_injection_remediation_suggestions.json  subset-002_pipeline_injection_vuln_report.json  subset-003_pipeline_injection_owasp_only.json  subset-003_pipeline_injection_remediation_suggestions.json  subset-003_pipeline_injection_vuln_report.json  subset-004_pipeline_injection_owasp_only.json  (+5 more)
xployt_lvl2/: __init__.py  generate_metadata.py  get_file_struct.py  get_file_struct_json.py  group_subsets.py  main.py  pipeline_executor.py  pipeline_suggester.py  select_vuln_files.py
xployt_lvl2/config/: state.py  (+4 more)
(+33 files in other folders)
